<?xml version="1.0"?>
<package format="2">
  <name>CameraData</name>
  <version>0.0.0</version>
  <description>The camera data package</description>

  <maintainer email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</maintainer>

  <license>MIT</license>

  <author email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
