<?xml version="1.0"?>
<package format="2">
  <name>human_control_interface</name>
  <version>1.0.1</version>
  <description>The human_control_interface package</description>

  <maintainer email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</maintainer>

  <license>MIT</license>

  <author email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
