<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>The custom_msgs package</description>

  <maintainer email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
