<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>human_control_interface</name>
  <version>1.0.1</version>
  <description>The human_control_interface package</description>

  <maintainer email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</maintainer>

  <license>MIT</license>

  <author email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>

  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
