<?xml version="1.0"?>
<package format="2">
  <name>rover_system</name>
  <version>1.0.0</version>
  <description>The rover_system package</description>

  <maintainer email="shaswatabhatt2030@gmail.com">shaswata</maintainer>


  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rover_gazebo</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>

  </export>
</package>
