<?xml version="1.0"?>
<package format="2">
  <name>ui_app</name>
  <version>0.0.0</version>
  <description>The ui_app package</description>

  
  <maintainer email="shaswata.bhattacharyya@mail.mcgill.ca">Shaswata</maintainer>


  <license>MIT</license>

  <author email="shaswata.bhattacharyya@mail.mcgill.ca">Shaswata</author>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  

  

  <export>
    <build_type>ament_python</build_type>

  </export>
</package>
